--- a/app/View/Themed/Default/webroot/css/main.css
+++ b/app/View/Themed/Default/webroot/css/main.css
@@ -140,6 +140,9 @@ body{font-family: 'Open Sans', sans-serif; font-weight: 400; line-height: 1}
 #main-menu{ background:url(../img/menu-bg.png) repeat-x; height: 42px; margin-bottom: 18px;}
 #main-menu ul{ margin: 0; padding: 0; display: table;}
 #main-menu ul li{ display:table-cell; text-align:center;font-size: 14px; color: #FFF; line-height: 42px; padding: 0 11.5px; background: url(../img/menu-border.png) no-repeat scroll right center; white-space: nowrap;}
+#main-menu ul li a:hover{color:#F0E100;}
+#main-menu ul li.active{background:#DC0A37;color:#F0E100;}
+#main-menu ul li.active a{color:#F0E100;}
 #main-menu ul li:last-child{ background:none;}
 #main-menu ul li a{ color: #FFF; text-decoration: none;}
 
