--- a/app/View/Themed/Admin/webroot/css/sb-admin.css
+++ b/app/View/Themed/Admin/webroot/css/sb-admin.css
@@ -185,5 +185,10 @@ table.tablesorter thead tr th:hover {
   }
 
 }
+.left{float:left;}
+.right{float:right;}
+.lists{width:300px;background:#F5f5f5;border-radius:10px;border: 1px solid #ccc;padding:10px;margin-bottom:5px;}
+.lists2{width:340px;border-radius:10px;border: 1px solid #ccc;padding:10px;margin-bottom:5px;margin-left:25px;}
+
 
 
